--- a/foundry.toml
+++ b/foundry.toml
@@ -3,7 +3,16 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
+[fuzz]
+runs = 1000
+seed = '0x2'
+
+[invariant]
+runs = 64
+depth = 32
+fail_on_revert = false
+
 remappings = [
-    "@openzeppelin/contracts=lib/openzeppelin-contracts"
+    "@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/"
 ]
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
